--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Mona Lisa</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
 <body style="background-color:rgb(68, 64, 64);">
